--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -23,20 +23,18 @@
 	school       = {{Queen Mary, University of London}},
 	keywords     = {FOS: Biological sciences}
 }
-@article{gibson_targeted_2023,
+@book{gibson_targeted_2023,
 	title        = {Targeted sampling of {Toxolasma} parvum ({Lilliput}) in southwestern {Ontario}, 2022},
-	author       = {Gibson, Mandy P.},
+	author       = {Gibson, Mandy P. and McNichols-O’Rourke, Kelly A. and Morris, Todd J.},
 	year         = 2023,
-	publisher    = {Ontario and Prairie Region},
+	publisher    = {Ontario and Prairie Region, Fisheries and Oceans Canada, Great Lakes Laboratory for Fisheries and Aquatic Sciences},
 	address      = {Burlington, ON},
-	series       = {Canadian data report of fisheries and aquatic sciences,},
-	number       = 1369,
-	isbn         = 9780660477961,
+	isbn         = {978-0-660-47796-1},
 	note         = {OCLC: 1405850670},
-	language     = {eng},
-	collaborator = {{Canada.}},
-	keywords     = {Toxolasma parvum Sampling Ontario}
+	abstract     = {"Toxolasma parvum (Lilliput) is currently listed as Endangered under the federal Species at Risk Act (SARA). At the time of its previous assessment by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), only 39 live collections of T. parvum had ever been found in Canada. We hypothesized that the low detection of T. parvum may be the result of a failure to target preferred habitat types of this species in Canada. In 2022, Fisheries and Oceans Canada (DFO) initiated a sampling program to target Lilliput preferred habitats by sampling 28 sites in the Lake St. Clair watershed, 5 sites in the Lake Erie watershed, and 2 sites in the Lake Ontario watershed"--Abstract},
+	language     = {eng}
 }
+
 @article{Lacko2023,
 	title        = {{RCzechia}: Spatial Objects of the {Czech} {Republic}},
 	author       = {Jindra Lacko},
