--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -171,3 +171,16 @@
 	issn         = {2045-2322},
 	url          = {https://doi.org/10.1038/s41598-024-56287-9}
 }
+@book{maclennan-nobrega_2022_2024,
+	title        = {2022 freshwater mussel timed-search surveys in the {Sydenham} {River} watershed, {Ontario}},
+	author       = {MacLennan-Nobrega, Emma and Lu, Al and Gibson, Mandy and McNichols-O’Rourke, Kelly A. and Morris, Todd J.},
+	year         = 2024,
+	publisher    = {Ontario and Prairie Region, Fisheries and Oceans Canada, Great Lakes Laboratory for Fisheries and Aquatic Sciences},
+	address      = {Burlington, ON},
+	series       = {Canadian data report of fisheries and aquatic sciences},
+	number       = {1488-5395 ; 1367},
+	isbn         = 9780660475868,
+	note         = {OCLC: 1419289396},
+	language     = {eng}
+}
+
