--- a/vignettes/articles/wild.Rmd
+++ b/vignettes/articles/wild.Rmd
@@ -29,6 +29,8 @@ A BibTeX entry for LaTeX users is:
 }
 ```
 
+<p><span class="__dimensions_badge_embed__" data-doi="10.21105/joss.05751" data-legend="always" data-style="small_circle"></span><script async src="https://badge.dimensions.ai/badge.js" charset="utf-8"></script>
+
 **tidyterra** package has been used in the following publications[^1].
 
 [^1]: Sadly not all the publications has used the **tidyterra**
