--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -34,7 +34,6 @@
 	abstract     = {"Toxolasma parvum (Lilliput) is currently listed as Endangered under the federal Species at Risk Act (SARA). At the time of its previous assessment by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), only 39 live collections of T. parvum had ever been found in Canada. We hypothesized that the low detection of T. parvum may be the result of a failure to target preferred habitat types of this species in Canada. In 2022, Fisheries and Oceans Canada (DFO) initiated a sampling program to target Lilliput preferred habitats by sampling 28 sites in the Lake St. Clair watershed, 5 sites in the Lake Erie watershed, and 2 sites in the Lake Ontario watershed"--Abstract},
 	language     = {eng}
 }
-
 @article{Lacko2023,
 	title        = {{RCzechia}: Spatial Objects of the {Czech} {Republic}},
 	author       = {Jindra Lacko},
@@ -183,4 +182,14 @@
 	note         = {OCLC: 1419289396},
 	language     = {eng}
 }
-
+@article{10.3389/frsen.2024.1368551,
+	title        = {Spectral imaging of grass species in arid ecosystems of {Namibia}},
+	author       = {Bantelmann, Paul and Wyss, Daniel and Pius, Elizabeth Twitileni and Kappas, Martin},
+	year         = 2024,
+	journal      = {{Frontiers in Remote Sensing}},
+	volume       = 5,
+	doi          = {10.3389/frsen.2024.1368551},
+	issn         = {2673-6187},
+	url          = {https://www.frontiersin.org/articles/10.3389/frsen.2024.1368551},
+	abstract     = {Grasslands across the African continent are under pressure from climate change and human activities, particularly in arid ecosystems. From a remote sensing perspective, these ecosystems have not received much scientific attention, especially in Namibia. To address this knowledge gap, various remote sensing methods were implemented using new generation spaceborne imaging spectrometers amongst others. Therefore, this research provides a first methodological approach aimed at mapping and evaluating the distribution of grasslands within two private nature reserves, namely, the NamibRand Nature Reserve (NRNR) and ProNamib Nature Reserve (PNNR) with surrounding farmlands on the edge of Namib Sand Sea. The multi-sensor approach utilizes Mixture Tuned Matched Filtering (MTMF) and incorporated spectral information collected in the field to analyze grasslands. The research involves a sensor comparison of multispectral Sentinel-2 and PlanetScope data, hyperspectral data from Environmental Mapping and Analysis Programme (EnMAP) and PRecursore IperSpettrale della Missione Applicativa (PRISMA) and an additional data fusion product derived from Sentinel-2 and EnMAP imagery based on a Smoothing Filter-based Intensity Modulation Hypersharpening method (SFIM-HS). Additionally, a unique spectral library of collected field spectra was established and inter-species spectral separability and intra-species spectral homogeneity was analyzed. This library presents newly published spectra of individual species. Due to dry initial conditions, the calculated spectral separability of individual grasses is limited, making only a mean endmember feasible for partial unmixing. The validation results of satellite comparison show that data fusion products (R<sup>2</sup> = 0.51 with Normalized Difference Vegetation Index (NDVI); R<sup>2</sup> = 0.66 with Soil Adjusted Vegetation Index (SAVI)) are more suitable for mapping arid grasslands than multispectral or hyperspectral data (all R<sup>2</sup> < 0.35). More research is required and potential methodological adjustments are discussed to further investigate the spatio-temporal dynamics of arid grasslands and to aid conservation efforts in the Greater Sossusvlei-Namib Landscape in line with the United Nations Decade of Restoration.}
+}
