--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -193,3 +193,17 @@
 	url          = {https://www.frontiersin.org/articles/10.3389/frsen.2024.1368551},
 	abstract     = {Grasslands across the African continent are under pressure from climate change and human activities, particularly in arid ecosystems. From a remote sensing perspective, these ecosystems have not received much scientific attention, especially in Namibia. To address this knowledge gap, various remote sensing methods were implemented using new generation spaceborne imaging spectrometers amongst others. Therefore, this research provides a first methodological approach aimed at mapping and evaluating the distribution of grasslands within two private nature reserves, namely, the NamibRand Nature Reserve (NRNR) and ProNamib Nature Reserve (PNNR) with surrounding farmlands on the edge of Namib Sand Sea. The multi-sensor approach utilizes Mixture Tuned Matched Filtering (MTMF) and incorporated spectral information collected in the field to analyze grasslands. The research involves a sensor comparison of multispectral Sentinel-2 and PlanetScope data, hyperspectral data from Environmental Mapping and Analysis Programme (EnMAP) and PRecursore IperSpettrale della Missione Applicativa (PRISMA) and an additional data fusion product derived from Sentinel-2 and EnMAP imagery based on a Smoothing Filter-based Intensity Modulation Hypersharpening method (SFIM-HS). Additionally, a unique spectral library of collected field spectra was established and inter-species spectral separability and intra-species spectral homogeneity was analyzed. This library presents newly published spectra of individual species. Due to dry initial conditions, the calculated spectral separability of individual grasses is limited, making only a mean endmember feasible for partial unmixing. The validation results of satellite comparison show that data fusion products (R<sup>2</sup> = 0.51 with Normalized Difference Vegetation Index (NDVI); R<sup>2</sup> = 0.66 with Soil Adjusted Vegetation Index (SAVI)) are more suitable for mapping arid grasslands than multispectral or hyperspectral data (all R<sup>2</sup> < 0.35). More research is required and potential methodological adjustments are discussed to further investigate the spatio-temporal dynamics of arid grasslands and to aid conservation efforts in the Greater Sossusvlei-Namib Landscape in line with the United Nations Decade of Restoration.}
 }
+@article{10.1371/journal.pone.0296881,
+	title        = {Evaluating spatially enabled machine learning approaches to depth to bedrock mapping, {Alberta}, {Canada}},
+	author       = {Pawley, Steven M. and Atkinson, Lisa and Utting, Daniel J. and Hartman, Gregory M. D. and Atkinson, Nigel},
+	year         = 2024,
+	month        = {03},
+	journal      = {PLOS ONE},
+	publisher    = {Public Library of Science},
+	volume       = 19,
+	number       = 3,
+	pages        = {1--26},
+	doi          = {10.1371/journal.pone.0296881},
+	url          = {https://doi.org/10.1371/journal.pone.0296881},
+	abstract     = {Maps showing the thickness of sediments above the bedrock (depth to bedrock, or DTB) are important for many geoscience studies and are necessary for many hydrogeological, engineering, mining, and forestry applications. However, it can be difficult to accurately estimate DTB in areas with varied topography, like lowland and mountainous terrain, because traditional methods of predicting bedrock elevation often underestimate or overestimate the elevation in rugged or incised terrain. Here, we describe a machine learning spatial prediction approach that uses information from traditional digital elevation model derived estimates of terrain morphometry and satellite imagery, augmented with spatial feature engineering techniques to predict DTB across Alberta, Canada. First, compiled measurements of DTB from borehole lithologs were used to train a natural language model to predict bedrock depth across all available lithologs, significantly increasing the dataset size. The combined data were then used for DTB modelling employing several algorithms (XGBoost, Random forests, and Cubist) and spatial feature engineering techniques, using a combination of geographic coordinates, proximity measures, neighbouring points, and spatially lagged DTB estimates. Finally, the results were contrasted with DTB predictions based on modelled relationships with the auxiliary variables, as well as conventional spatial interpolations using inverse-distance weighting and ordinary kriging methods. The results show that the use of spatially lagged variables to incorporate information from the spatial structure of the training data significantly improves predictive performance compared to using auxiliary predictors and/or geographic coordinates alone. Furthermore, unlike some of the other tested methods such as using neighbouring point locations directly as features, spatially lagged variables did not generate spurious spatial artifacts in the predicted raster maps. The proposed method is demonstrated to produce reliable results in several distinct physiographic sub-regions with contrasting terrain types, as well as at the provincial scale, indicating its broad suitability for DTB mapping in general.}
+}
