--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -207,3 +207,16 @@
 	url          = {https://doi.org/10.1371/journal.pone.0296881},
 	abstract     = {Maps showing the thickness of sediments above the bedrock (depth to bedrock, or DTB) are important for many geoscience studies and are necessary for many hydrogeological, engineering, mining, and forestry applications. However, it can be difficult to accurately estimate DTB in areas with varied topography, like lowland and mountainous terrain, because traditional methods of predicting bedrock elevation often underestimate or overestimate the elevation in rugged or incised terrain. Here, we describe a machine learning spatial prediction approach that uses information from traditional digital elevation model derived estimates of terrain morphometry and satellite imagery, augmented with spatial feature engineering techniques to predict DTB across Alberta, Canada. First, compiled measurements of DTB from borehole lithologs were used to train a natural language model to predict bedrock depth across all available lithologs, significantly increasing the dataset size. The combined data were then used for DTB modelling employing several algorithms (XGBoost, Random forests, and Cubist) and spatial feature engineering techniques, using a combination of geographic coordinates, proximity measures, neighbouring points, and spatially lagged DTB estimates. Finally, the results were contrasted with DTB predictions based on modelled relationships with the auxiliary variables, as well as conventional spatial interpolations using inverse-distance weighting and ordinary kriging methods. The results show that the use of spatially lagged variables to incorporate information from the spatial structure of the training data significantly improves predictive performance compared to using auxiliary predictors and/or geographic coordinates alone. Furthermore, unlike some of the other tested methods such as using neighbouring point locations directly as features, spatially lagged variables did not generate spurious spatial artifacts in the predicted raster maps. The proposed method is demonstrated to produce reliable results in several distinct physiographic sub-regions with contrasting terrain types, as well as at the provincial scale, indicating its broad suitability for DTB mapping in general.}
 }
+@article{10.3390/horticulturae10040326,
+	title        = {Distribution of {Plasmopara viticola} Causing Downy Mildew in Russian Far East Grapevines},
+	author       = {Nityagovsky, Nikolay N. and Ananev, Alexey A. and Suprun, Andrey R. and Ogneva, Zlata V. and Dneprovskaya, Alina A. and Tyunin, Alexey P. and Dubrovina, Alexandra S. and Kiselev, Konstantin V. and Sanina, Nina M. and Aleynova, Olga A.},
+	year         = 2024,
+	journal      = {Horticulturae},
+	publisher    = {MDPI AG},
+	volume       = 10,
+	number       = 4,
+	pages        = 326,
+	doi          = {10.3390/horticulturae10040326},
+	url          = {https://doi.org/10.3390/horticulturae10040326}
+}
+
