--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -1,5 +1,5 @@
 @article{bahlburg2023,
-	title        = {An intercomparison of models predicting growth of {Antarctic} krill ({Euphausia superba}): The importance of recognizing model specificity},
+	title        = {An intercomparison of models predicting growth of {Antarctic krill (Euphausia superba)}: The importance of recognizing model specificity},
 	author       = {Bahlburg, Dominik and Thorpe, Sally E. and Meyer, Bettina and Berger, Uta and Murphy, Eugene J.},
 	year         = 2023,
 	month        = {07},
@@ -12,8 +12,8 @@
 	url          = {https://doi.org/10.1371/journal.pone.0286036}
 }
 @phdthesis{chavez_sonoran_2023,
-	title        = {Sonoran {Desert} {Ex} {Situ} {Conservation} {Gap} {Analysis}: {Charting} the {Path} {Toward} {Conservation}.},
-	shorttitle   = {Sonoran {Desert} {Ex} {Situ} {Conservation} {Gap} {Analysis}},
+	title        = {{Sonoran} {Desert} Ex Situ Conservation Gap Analysis: Charting the Path Toward Conservation.},
+	shorttitle   = {{Sonoran} {Desert} Ex Situ Conservation Gap Analysis},
 	author       = {Chavez, Maria},
 	year         = 2023,
 	doi          = {10.34885/E2HA-QE07},
@@ -24,7 +24,7 @@
 	keywords     = {FOS: Biological sciences}
 }
 @book{gibson_targeted_2023,
-	title        = {Targeted sampling of {Toxolasma} parvum ({Lilliput}) in southwestern {Ontario}, 2022},
+	title        = {Targeted sampling of {Toxolasma parvum (Lilliput)} in southwestern {Ontario}, 2022},
 	author       = {Gibson, Mandy P. and McNichols-O’Rourke, Kelly A. and Morris, Todd J.},
 	year         = 2023,
 	publisher    = {Ontario and Prairie Region, Fisheries and Oceans Canada, Great Lakes Laboratory for Fisheries and Aquatic Sciences},
@@ -35,7 +35,7 @@
 	language     = {eng}
 }
 @article{Lacko2023,
-	title        = {{RCzechia}: Spatial Objects of the {Czech} {Republic}},
+	title        = {{RCzechia}: Spatial Objects of the {Czech Republic}},
 	author       = {Jindra Lacko},
 	year         = 2023,
 	journal      = {Journal of Open Source Software},
@@ -50,7 +50,7 @@
 	title        = {{tidysdm}: leveraging the flexibility of {tidymodels} for Species Distribution Modelling in {R}},
 	author       = {Michela Leonardi and Margherita Colucci and Andrea Manica},
 	year         = 2023,
-	journal      = {bioRxiv},
+	journal      = {{bioRxiv}},
 	publisher    = {Cold Spring Harbor Laboratory},
 	doi          = {10.1101/2023.07.24.550358},
 	url          = {https://www.biorxiv.org/content/early/2023/07/26/2023.07.24.550358},
@@ -58,7 +58,7 @@
 	eprint       = {https://www.biorxiv.org/content/early/2023/07/26/2023.07.24.550358.full.pdf}
 }
 @article{meister2023,
-	title        = {Blue mussels in western Norway have vanished where in reach of crawling predators},
+	title        = {Blue mussels in western {Norway} have vanished where in reach of crawling predators},
 	author       = {Nadja Meister and Tom J. Langbehn and  Øystein Varpe and Christian Jørgensen},
 	year         = 2023,
 	month        = 10,
@@ -71,8 +71,8 @@
 	langid       = {en}
 }
 @book{moraga_spatial_2023,
-	title        = {Spatial {Statistics} for {Data} {Science}: {Theory} and {Practice} with {R}},
-	shorttitle   = {Spatial {Statistics} for {Data} {Science}},
+	title        = {Spatial Statistics for Data Science: Theory and Practice with {R}},
+	shorttitle   = {Spatial Statistics for Data Science},
 	author       = {Moraga, Paula},
 	year         = 2023,
 	month        = nov,
@@ -86,7 +86,7 @@
 	language     = {en}
 }
 @manual{R-nasaacces,
-	title        = {{NASAaccess}: Downloading and Reformatting Tool for {NASA} Earth Observation Data Products},
+	title        = {{NASAaccess}: Downloading and Reformatting Tool for {NASA} {Earth Observation Data} Products},
 	author       = {Ibrahim Mohammed},
 	year         = 2024,
 	address      = {Greenbelt, Maryland},
@@ -100,7 +100,7 @@
 	year         = 2024,
 	month        = {jan},
 	day          = 23,
-	journal      = {{npj} {Ocean Sustainability}},
+	journal      = {{npj Ocean Sustainability}},
 	volume       = 3,
 	number       = 1,
 	pages        = 4,
@@ -138,7 +138,7 @@
 	title        = {The {rasterdiv} package for measuring diversity from space},
 	author       = {Matteo Marcantonio and Elisa Thouverau and Duccio Rocchini},
 	year         = 2024,
-	journal      = {bioRxiv},
+	journal      = {{bioRxiv}},
 	publisher    = {Cold Spring Harbor Laboratory},
 	doi          = {10.1101/2024.02.07.579266},
 	url          = {https://www.biorxiv.org/content/early/2024/02/13/2024.02.07.579266},
@@ -157,7 +157,7 @@
 	url          = {https://doi.org/10.1007/s00704-024-04893-y}
 }
 @article{Poyhonen2024,
-	title        = {High Arctic "hotspots" for sperm whales ({Physeter macrocephalus}) off western and northern {Svalbard, Norway}, revealed by multi-year {Passive Acoustic Monitoring (PAM)}},
+	title        = {High {Arctic} "hotspots" for sperm whales ({Physeter macrocephalus}) off western and northern {Svalbard, Norway}, revealed by multi-year {Passive Acoustic Monitoring (PAM)}},
 	author       = {Pöyhönen, Viivi and Thomisch, Karolin and Kovacs, Kit M. and Lydersen, Christian and Ahonen, Heidi},
 	year         = 2024,
 	month        = {Mar},
@@ -208,7 +208,7 @@
 	abstract     = {Maps showing the thickness of sediments above the bedrock (depth to bedrock, or DTB) are important for many geoscience studies and are necessary for many hydrogeological, engineering, mining, and forestry applications. However, it can be difficult to accurately estimate DTB in areas with varied topography, like lowland and mountainous terrain, because traditional methods of predicting bedrock elevation often underestimate or overestimate the elevation in rugged or incised terrain. Here, we describe a machine learning spatial prediction approach that uses information from traditional digital elevation model derived estimates of terrain morphometry and satellite imagery, augmented with spatial feature engineering techniques to predict DTB across Alberta, Canada. First, compiled measurements of DTB from borehole lithologs were used to train a natural language model to predict bedrock depth across all available lithologs, significantly increasing the dataset size. The combined data were then used for DTB modelling employing several algorithms (XGBoost, Random forests, and Cubist) and spatial feature engineering techniques, using a combination of geographic coordinates, proximity measures, neighbouring points, and spatially lagged DTB estimates. Finally, the results were contrasted with DTB predictions based on modelled relationships with the auxiliary variables, as well as conventional spatial interpolations using inverse-distance weighting and ordinary kriging methods. The results show that the use of spatially lagged variables to incorporate information from the spatial structure of the training data significantly improves predictive performance compared to using auxiliary predictors and/or geographic coordinates alone. Furthermore, unlike some of the other tested methods such as using neighbouring point locations directly as features, spatially lagged variables did not generate spurious spatial artifacts in the predicted raster maps. The proposed method is demonstrated to produce reliable results in several distinct physiographic sub-regions with contrasting terrain types, as well as at the provincial scale, indicating its broad suitability for DTB mapping in general.}
 }
 @article{10.3390/horticulturae10040326,
-	title        = {Distribution of {Plasmopara viticola} Causing Downy Mildew in Russian Far East Grapevines},
+	title        = {Distribution of {Plasmopara viticola} Causing Downy Mildew in {Russian} Far East Grapevines},
 	author       = {Nityagovsky, Nikolay N. and Ananev, Alexey A. and Suprun, Andrey R. and Ogneva, Zlata V. and Dneprovskaya, Alina A. and Tyunin, Alexey P. and Dubrovina, Alexandra S. and Kiselev, Konstantin V. and Sanina, Nina M. and Aleynova, Olga A.},
 	year         = 2024,
 	journal      = {Horticulturae},
@@ -219,4 +219,3 @@
 	doi          = {10.3390/horticulturae10040326},
 	url          = {https://doi.org/10.3390/horticulturae10040326}
 }
-
