--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -207,15 +207,29 @@
 	url          = {https://doi.org/10.1371/journal.pone.0296881},
 	abstract     = {Maps showing the thickness of sediments above the bedrock (depth to bedrock, or DTB) are important for many geoscience studies and are necessary for many hydrogeological, engineering, mining, and forestry applications. However, it can be difficult to accurately estimate DTB in areas with varied topography, like lowland and mountainous terrain, because traditional methods of predicting bedrock elevation often underestimate or overestimate the elevation in rugged or incised terrain. Here, we describe a machine learning spatial prediction approach that uses information from traditional digital elevation model derived estimates of terrain morphometry and satellite imagery, augmented with spatial feature engineering techniques to predict DTB across Alberta, Canada. First, compiled measurements of DTB from borehole lithologs were used to train a natural language model to predict bedrock depth across all available lithologs, significantly increasing the dataset size. The combined data were then used for DTB modelling employing several algorithms (XGBoost, Random forests, and Cubist) and spatial feature engineering techniques, using a combination of geographic coordinates, proximity measures, neighbouring points, and spatially lagged DTB estimates. Finally, the results were contrasted with DTB predictions based on modelled relationships with the auxiliary variables, as well as conventional spatial interpolations using inverse-distance weighting and ordinary kriging methods. The results show that the use of spatially lagged variables to incorporate information from the spatial structure of the training data significantly improves predictive performance compared to using auxiliary predictors and/or geographic coordinates alone. Furthermore, unlike some of the other tested methods such as using neighbouring point locations directly as features, spatially lagged variables did not generate spurious spatial artifacts in the predicted raster maps. The proposed method is demonstrated to produce reliable results in several distinct physiographic sub-regions with contrasting terrain types, as well as at the provincial scale, indicating its broad suitability for DTB mapping in general.}
 }
-@article{10.3390/horticulturae10040326,
-	title        = {Distribution of {Plasmopara viticola} Causing Downy Mildew in {Russian} Far East Grapevines},
+@article{horticulturae10040326,
+	title        = {Distribution of {Plasmopara viticola} Causing Downy Mildew in Russian Far East Grapevines},
 	author       = {Nityagovsky, Nikolay N. and Ananev, Alexey A. and Suprun, Andrey R. and Ogneva, Zlata V. and Dneprovskaya, Alina A. and Tyunin, Alexey P. and Dubrovina, Alexandra S. and Kiselev, Konstantin V. and Sanina, Nina M. and Aleynova, Olga A.},
 	year         = 2024,
 	journal      = {Horticulturae},
-	publisher    = {MDPI AG},
 	volume       = 10,
 	number       = 4,
-	pages        = 326,
 	doi          = {10.3390/horticulturae10040326},
-	url          = {https://doi.org/10.3390/horticulturae10040326}
+	issn         = {2311-7524},
+	url          = {https://www.mdpi.com/2311-7524/10/4/326},
+	article-number = 326,
+	abstract     = {Downy mildew is a severe disease that leads to significant losses in grape yields worldwide. It is caused by the oomycete Plasmopara viticola. The study of the distribution of this agent and the search for endophytic organisms that inhibit the growth of P. viticola are essential objectives to facilitate the transition to sustainable and high-yield agriculture, while respecting the environment. In this study, high-throughput sequencing of the ITS (ITS1f/ITS2 region) and 16S (V4 region) amplicons was employed to analyze 80 samples of leaves and stems from different grapevine species and cultivars grown in the Russian Far East (Vitis amurensis Rupr., Vitis coignetiae Pulliat, and several grapevine cultivars). The analysis revealed the presence of P. viticola in 53.75% of the grape samples. The pathogen P. viticola was not detected in V. amurensis samples collected near Vladivostok and Russky Island. Among the P. viticola-affected samples, only two (out of the eighty analyzed grape samples) from the Makarevich vineyard in Primorsky Krai exhibited disease symptoms, while the majority appeared visually healthy. We also found six distinct P. viticola ASVs in our metagenomic data. Based on phylogenetic analysis, we hypothesize that the P. viticola population in the Russian Far East may have originated from the invasive P. viticola clade aestivalis, which has spread around the world from North America. To identify putative microbial antagonists of P. viticola, a differential analysis of high-throughput sequencing data was conducted using the DESeq2 method to compare healthy and P. viticola-affected samples. The in silico analysis revealed an increased representation of certain taxa in healthy samples compared to P. viticola-affected ones: fungi—Kabatina sp., Aureobasidium sp., and Vishniacozyma sp.; bacteria—Hymenobacter spp., Sphingomonas spp., Massilia spp., Methylobacterium-Methylorubrum spp., and Chryseobacterium spp. This in-silico-obtained information on the potential microbial antagonists of P. viticola serves as a theoretical basis for the development of biocontrol agents for grapevine downy mildew.}
+}
+@article{f15040648,
+	title        = {Fragmentation and Connectivity in dehesa Ecosystems Associated with {Cerambyx} spp. Dispersion and Control: A {Graph-Theory} Approach},
+	author       = {Cidre-González, Adrián and Rivas, Carlos A. and Navarro-Cerrillo, Rafael M.},
+	year         = 2024,
+	journal      = {Forests},
+	volume       = 15,
+	number       = 4,
+	doi          = {10.3390/f15040648},
+	issn         = {1999-4907},
+	url          = {https://www.mdpi.com/1999-4907/15/4/648},
+	article-number = 648,
+	abstract     = {Xylophagous insects play a crucial role in forest ecosystems, contributing to population dynamics. The “Cerambyx complex” (CC) constitutes an emerging pest in Mediterranean oak woodlands. We studied the fragmentation and connectivity of holm and cork oak stands in Andalusia (Spain), and the relationships with the current dispersion of CC, as well as the effect on the connectivity and dispersion patterns with the implementation of nests of a predator bird (Garrulus glandarius) to reduce insect populations in highly connected areas. The Kernel Density Estimation (KDE) was used to assess the spatial distribution of CC. Connectivity was assessed using graphs theory (Graphab 2.6) to characterize the importance of patches and linkages for contributing to dispersal. We selected the Eurasian jay (G. glandarius) as a reference bird species to generate “barriers” to the dispersion of the CC. We used the probability of connectivity (PC) and the flux (F) to compare the effect of the introduction of Eurasian jay nets. Results showed an increasing trend in the distribution and incidence of CC during the period 2001–2016, resulting in 7.3% and 13.1% mortality rates for Q. ilex and Q. suber, respectively. The connectivity model using only Q. ilex and Q. suber forests as reference habitats was not enough to explain the distribution of CC. The value of PC and F metrics decreased by 38.09% and 20.59% by introducing 300 nests of Eurasian jay. Our methodology provides a pest management tool using connectivity metrics, which can be integrated with other variables to control pest outbreaks and pest dispersion.}
 }
