--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -1,5 +1,5 @@
 @article{bahlburg2023,
-	title        = {An intercomparison of models predicting growth of {Antarctic krill (Euphausia superba)}: The importance of recognizing model specificity},
+	title        = {An intercomparison of models predicting growth of {Antarctic krill (\textit{Euphausia superba})}: The importance of recognizing model specificity},
 	author       = {Bahlburg, Dominik and Thorpe, Sally E. and Meyer, Bettina and Berger, Uta and Murphy, Eugene J.},
 	year         = 2023,
 	month        = {07},
